add /api/downloadfromcloud
